--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>watermarking</groupId>
-	<artifactId>watermarking</artifactId>
+	<artifactId>prototype</artifactId>
 	<version>1</version>
 	<packaging>jar</packaging>
 
