--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>interfaces.ConsoleUI</mainClass>
+									<mainClass>ui.ConsoleUI</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
